# cli

./: CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  node.rs  signer.rs  sim.rs  util.rs  wallet.rs
