[package]
name = "manta-cli"
version = "0.1.0"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/cli"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/cli"
categories = [""]
keywords = [""]
description = "Command Line Tools for Interacting with Manta Protocols"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/cli" }
is-it-maintained-open-issues = { repository = "Manta-Network/cli" }
maintenance = { status = "actively-developed" }

[features]
# Enable the Node CLI
node = ["manta"]

# Enable the Signer CLI
signer = ["async-std", "manta-crypto", "manta-signer", "rpassword"]

# Enable the Simulation CLI
sim = ["manta-crypto", "manta-pay", "manta-sdk", "manta-util"]

[dependencies]
anyhow = { version = "1.0.57", default-features = false }
async-std = { version = "1.11.0", optional = true, default-features = false, features = ["attributes", "tokio1"] }
clap = { version = "3.2.4", default-features = false, features = ["color", "derive", "std", "suggestions", "unicode", "wrap_help"] }
clap-verbosity-flag = { version = "1.0.1", default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error", "from_str"] }
manta = { git = "https://github.com/manta-network/Manta", branch = "fix/add-back-cli-lib", optional = true, default-features = false }
manta-crypto = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false, features = ["getrandom"] }
manta-pay = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false, features = ["clap", "groth16", "scale-std", "simulation"] }
manta-sdk = { git = "https://github.com/manta-network/sdk", optional = true, default-features = false }
manta-signer = { git = "https://github.com/manta-network/manta-signer", optional = true, default-features = false, features = ["unsafe-disable-cors"] }
manta-util = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false }
rpassword = { version = "6.0.1", optional = true, default-features = false }
tempfile = { version = "3.3.0", default-features = false }
tokio = { version = "1.19.2", default-features = false }

[build-dependencies]
clap_mangen = { version = "0.1.8", default-features = false }
clap_complete = { version = "3.1.4", default-features = false }

