[package]
name = "manta-cli"
version = "0.1.0"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/cli"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/cli"
categories = [""]
keywords = [""]
description = "Command Line Tools for Interacting with Manta Protocols"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/cli" }
is-it-maintained-open-issues = { repository = "Manta-Network/cli" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3.2.10", default-features = false, features = ["std"] }

