[package]
name = "manta-cli"
version = "0.1.0"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/cli"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/cli"
categories = [""]
keywords = [""]
description = "Command Line Tools for Interacting with Manta Protocols"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/cli" }
is-it-maintained-open-issues = { repository = "Manta-Network/cli" }
maintenance = { status = "actively-developed" }

[features]
# Enable the Node CLI
node = ["manta"]

# Enable the Signer CLI
signer = ["async-std", "manta-crypto", "manta-signer", "rpassword"]

# Enable the Simulation CLI
sim = ["manta-crypto", "manta-pay", "manta-parameters", "manta-util"]

[dependencies]
anyhow = { version = "1.0.62", default-features = false }
async-std = { version = "1.12.0", optional = true, default-features = false, features = ["attributes", "tokio1"] }
clap = { version = "3.2.18", default-features = false, features = ["color", "derive", "std", "suggestions", "unicode", "wrap_help"] }
clap-verbosity-flag = { version = "1.0.1", default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error", "from_str"] }
manta = { git = "https://github.com/manta-network/Manta", optional = true, default-features = false }
manta-crypto = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false, features = ["getrandom"] }
manta-parameters = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false, features = ["download"] }
manta-pay = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false, features = ["clap", "download", "groth16", "scale-std", "simulation", "test"] }
manta-signer = { git = "https://github.com/manta-network/manta-signer", optional = true, default-features = false, features = ["unsafe-disable-cors"] }
manta-util = { git = "https://github.com/manta-network/manta-rs", optional = true, default-features = false }
rpassword = { version = "7.2.0", optional = true, default-features = false }
tempfile = { version = "3.3.0", default-features = false }
tokio = { version = "1.20.1", default-features = false }

[build-dependencies]
clap_complete = { version = "3.2.4", default-features = false }
clap_mangen = { version = "0.1.10", default-features = false }

